# Theory_of_Parallelism

./: .gitignore
task 1/: CMakeLists.txt  README.md  main.cpp
task 2/: DGEMV.cpp  integral  solver  table  table.cpp
task 3/: CONCLUSION.MD  CONCLUSIONS.md  DGEMV  DGEMV.cpp  client_server_app.cpp  integral.cpp  solver.cpp  task3_app  task_server.hpp
task 3/task 3/results/: client_pow.txt  client_sin.txt  client_sqrt.txt
task 4/: SensorManager.py
